syntax = "proto3";

package reg;

option go_package = "./pkg/proto";

service RegistrationService {
    rpc Register(ReqisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
}

//for Register

message ReqisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    int64 status = 1;
    string error = 2;
}

//for Login

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
}

//for Authenticate

message AuthenticateRequest {
    string token = 1;
}

message AuthenticateResponse {
    int64 status = 1;
    string error = 2;
    int64 userId = 3;
}
